[metadata]
name = api-flow
version = 0.5.0
author = Rob Thomas
author_email = pypi@sharedsecret.com
description = A utility for running flows of chained API calls
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rothomas/api_flow.git
project_urls =
    Bug Tracker = https://github.com/rothomas/api_flow/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src
